# mdcii-engine

./: .clang-format  .dockerignore  .gitignore  .gitmodules  ADAPT.md  AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  dobi.yaml  go.mod  go.sum  texture_atlas.json
.circleci/: config.yml
cmake/: CompileOptions.cmake
doc/: grafikreihenfolge.md
old-source/lib/proto-textcod/: CMakeLists.txt  textcod.proto
old-source/mdcii/zeitext/: CMakeLists.txt
old-source/mdcii/zeitext/src/: zeitext.cpp
source/: .clang-format  CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/proto-gamelist/: CMakeLists.txt  gamelist.proto
source/lib/proto-scenarios/: CMakeLists.txt  scenarios.proto
source/mdcii/: CMakeLists.txt
source/mdcii/bshdump/: CMakeLists.txt
source/mdcii/bshdump/src/: bshdump.cpp
source/mdcii/bshpacker/: CMakeLists.txt
source/mdcii/bshpacker/src/: bshpacker.cpp
source/mdcii/cod_parser/: CMakeLists.txt  test4.txt
source/mdcii/cod_parser/src/: cod_parser.cpp
source/mdcii/cod_parser_test/: CMakeLists.txt
source/mdcii/cod_parser_test/src/: cod_parser_test.cpp
source/mdcii/codcat/: CMakeLists.txt
source/mdcii/gam_parser/: CMakeLists.txt
source/mdcii/gam_parser/src/: gam_parser.cpp
source/mdcii/inselbmp/src/: inselbmp.cpp
source/mdcii/islandbmp/: CMakeLists.txt
source/mdcii/islandbmp/src/: islandbmp.cpp
source/mdcii/mdcii/: CMakeLists.txt
source/mdcii/mdcii-sdltest/: CMakeLists.txt
source/mdcii/mdcii-sdltest/source/: sdltest.cpp
source/mdcii/mdcii-sdltest/src/: sdltest.cpp
source/mdcii/mdcii/include/mdcii/: animation.hpp  basegad_dat.hpp  bildspeicher.hpp  bildspeicher_pal8.hpp  bildspeicher_rgb24.hpp  bildspeicher_trans_pal8.hpp  block.hpp  bsh_leser.hpp  bsh_schreiber.hpp  bsh_texture.hpp  cod_parser.hpp  files.hpp  files_to_check.hpp  fps.hpp  gamewindow.hpp  generischer_bsh_leser.hpp  haeuser.hpp  host_gad.hpp  insel.hpp  kamera.hpp  karte.hpp  mainmenu.hpp  mdcii.hpp  palette.hpp  savegames.hpp  singleplayerwindow.hpp  spielbildschirm.hpp  strukturen.hpp  table.hpp  version.hpp  welt.hpp  zei_leser.hpp  zei_texture.hpp
source/mdcii/mdcii/include/mdcii/bsh/: bshreader.hpp  bshtexture.hpp  bshwriter.hpp  genericbshreader.hpp  zeireader.hpp  zeitexture.hpp
source/mdcii/mdcii/include/mdcii/cache/: cacheprotobuf.hpp
source/mdcii/mdcii/include/mdcii/camera/: bshresources.hpp
source/mdcii/mdcii/include/mdcii/cod/: basegad_dat.hpp  buildings.hpp  cod_parser.hpp  codhelpers.hpp  haeuser.hpp  host_gad.hpp  mission_gad.hpp  text_cod.hpp
source/mdcii/mdcii/include/mdcii/common/: stringhelpers.hpp
source/mdcii/mdcii/include/mdcii/files/: files.hpp  filestocheck.hpp
source/mdcii/mdcii/include/mdcii/framebuffer/: framebuffer.hpp  framebuffer_pal8.hpp  framebuffer_rgb24.hpp  framebuffer_trans_pal8.hpp  palette.hpp
source/mdcii/mdcii/include/mdcii/gam/: chunk.hpp  city.hpp  deer.hpp  gamParser.hpp  gam_parser.hpp  generic.hpp  island.hpp  island3.hpp  island4.hpp  island5.hpp  islandhouse.hpp  kontor.hpp  marketplace.hpp  military.hpp  mission.hpp  missions.hpp  productionlist.hpp  rawgrowth.hpp  scene.hpp  settlers.hpp  shipyard.hpp  temp  template.hpp  warehouse.hpp
source/mdcii/mdcii/include/mdcii/gam/doc/: scene.md
source/mdcii/mdcii/include/mdcii/menu/: fps.hpp  gamewindow.hpp  mainmenu.hpp  scale.hpp  screenbase.hpp  singleplayerwindow.hpp  startgamewindow.hpp
source/mdcii/mdcii/include/mdcii/renderer/: renderer.hpp
source/mdcii/mdcii/include/mdcii/savegames/: savegames.hpp  scenarios.hpp
source/mdcii/mdcii/include/mdcii/version/: version.hpp
source/mdcii/mdcii/include/mdcii/world/: world.hpp
source/mdcii/mdcii/source/: bildspeicher.cpp  mainmenu.cpp
source/mdcii/mdcii/src/: bildspeicher.cpp  bildspeicher_pal8.cpp  bildspeicher_rgb24.cpp  bildspeicher_trans_pal8.cpp  block.cpp  bsh_schreiber.cpp  bsh_texture.cpp  cod_parser.cpp  files.cpp  gamewindow.cpp  insel.cpp  kamera.cpp  karte.cpp  mainmenu.cpp  mdcii.cpp  palette.cpp  savegames.cpp  singleplayerwindow.cpp  spielbildschirm.cpp  version.cpp  welt.cpp  zei_texture.cpp
source/mdcii/mdcii/src/bsh/: bshtexture.cpp  bshwriter.cpp  zeitexture.cpp
source/mdcii/mdcii/src/camera/: bshresources.cpp  camera.cpp
source/mdcii/mdcii/src/cod/: basegad_dat.cpp  buildings.cpp  cod_parser.cpp  codhelpers.cpp  haeuser.cpp  host_gad.cpp  mission_gad.cpp  text_cod.cpp
source/mdcii/mdcii/src/common/: stringhelpers.cpp
source/mdcii/mdcii/src/files/: files.cpp
source/mdcii/mdcii/src/framebuffer/: framebuffer.cpp  framebuffer_pal8.cpp  framebuffer_rgb24.cpp  framebuffer_trans_pal8.cpp  palette.cpp
source/mdcii/mdcii/src/gam/: chunk.cpp  city.cpp  deer.cpp  gamParser.cpp  gam_parser.cpp  island.cpp  island3.cpp  island4.cpp  island5.cpp  islandhouse.cpp  kontor.cpp  marketplace.cpp  military.cpp  mission.cpp  missions.cpp  productionlist.cpp  randomislands.cpp  rawgrowth.cpp  scene.cpp  settlers.cpp  shipyard.cpp  template.cpp  warehouse.cpp
source/mdcii/mdcii/src/menu/: gamewindow.cpp  mainmenu.cpp  scale.cpp  screenbase.cpp  singleplayerwindow.cpp  startgamewindow.cpp
source/mdcii/mdcii/src/renderer/: renderer.cpp
source/mdcii/mdcii/src/savegames/: savegames.cpp  scenarios.cpp
source/mdcii/mdcii/src/test/cod_parser_test/: cod_parser_test.cpp
source/mdcii/mdcii/src/test/data_field_reader/: read_gadget_objekt.py
source/mdcii/mdcii/src/version/: version.cpp
source/mdcii/mdcii/src/world/: world.cpp
source/mdcii/paldump/: CMakeLists.txt
source/mdcii/paldump/src/: paldump.cpp
source/mdcii/weltbmp/src/: weltbmp.cpp
source/mdcii/worldbmp/: CMakeLists.txt
source/mdcii/worldbmp/src/: worldbmp.cpp
source/mdcii/zeidump/src/: zeidump.cpp
source/mdcii/zeitext/src/: zeitext.cpp
source/tests/: CMakeLists.txt
source/tests/cache-test/: CMakeLists.txt  cacheProtobufTest.cpp
source/tests/proto-gamelist-test/: CMakeLists.txt  protoGamesTest.cpp
source/tests/proto-textcod-test/: CMakeLists.txt  main.cpp  text.cod  textcodTest.cpp
src/test/cod_parser_test/: CMakeLists.txt  cod_parser_test.cpp  test.cod  test.txt  test2.cod  test2.txt
(+207 files in other folders)
